calculatrice/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  namespace: gilles # Remplacez par le nom de votre namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: calculatrice-gilles.polytech-dijon.kiowy.net # Nom de domaine pour la production
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend-service # Service du frontend
                port:
                  number: 80
          - path: "/api/"
            pathType: Prefix
            backend:
              service:
                name: backend-service # Service du backend
                port:
                  number: 5000
